fix: fixes scrollbar jump when clicking into swapbox (#311)
* fix: fixes scrollbar jump when clicking into swapbox

closes #298

* hide scrollbar for webkit

only needed for home page

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -14,6 +14,9 @@ body {
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
 }
+body::-webkit-scrollbar {
+    display: none;
+}
 
 footer {
     text-align: center;
